--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,70 @@ pytest==7.4.0
 pytest-flask==1.2.0
 tomli==2.0.1
 Werkzeug==2.3.7
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+Brotli==1.1.0
+bs4==0.0.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+clear==2.0.0
+click==8.1.7
+click-completion==0.5.2
+click-default-group==1.2.4
+colorama==0.4.6
+ConfigArgParse==1.7
+coverage==7.3.1
+cucumber-tag-expressions==4.1.0
+exceptiongroup==1.1.3
+Flask==2.3.3
+Flask-BasicAuth==0.2.0
+Flask-Cors==4.0.0
+gevent==23.9.1
+geventhttpclient==2.0.10
+greenlet==3.0.0rc3
+h11==0.14.0
+idna==3.4
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+locust==2.16.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+msgpack==1.0.6
+outcome==1.2.0
+packaging==23.1
+pluggy==1.3.0
+pprintpp==0.4.0
+psutil==5.9.5
+pycparser==2.21
+Pygments==2.16.1
+PySocks==1.7.1
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-flask==1.2.0
+pytest-mock==3.11.1
+python-dotenv==1.0.0
+pywin32==306
+pyzmq==25.1.1
+requests==2.31.0
+rich==13.5.3
+roundrobin==0.0.4
+selenium==4.13.0
+shellingham==1.5.3
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+tomli==2.0.1
+trio==0.22.2
+trio-websocket==0.11.1
+typing_extensions==4.8.0
+urllib3==2.0.4
+ward==0.67.2b0
+Werkzeug==2.3.7
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==6.0
